--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Modificar.cshtml
@@ -58,6 +58,37 @@
             win.focus();
         }
     }
+
+    function ImprimirRIDE() {
+        var location = GetPathServer();
+        var win = window.open(location +"/Reportes/FacturacionReportes/FAC_020?IdSucursal="+@Model.IdSucursal+"&IdBodega="+@Model.IdBodega+"&IdGuiaRemision="+@Model.IdGuiaRemision, '_blank');
+        win.focus();
+    }
+
+
+    function AutorizarSRI() {
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdSucursal: $("#IdSucursal").val(),
+            IdBodega: $("#IdBodega").val(),
+            IdGuiaRemision: $("#IdGuiaRemision").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("AutorizarSRI", "GuiaRemision",new { Area = "Facturacion"})',
+            async: false,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                if (data.length > 0) {
+                    alert("Solicitud de autorización enviada exitósamente, por favor espere a que sea procesada por el SRI para imprimir el RIDE");
+                }
+            },
+            error: function (error) {
+            }
+        });
+    }
 </script>
 @model Core.Erp.Info.Facturacion.fa_guia_remision_Info
 @{
@@ -108,16 +139,22 @@
     }
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-offset-10 col-md-1">
-                <label for="IdImprimir"></label>
-                <div class="form-group">
-                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
-                        <i class="fa fa-print"></i>
-                    </button>
-                </div>
+            <div class="col-md-offset-2 col-md-2">
+                <button type="button" class="btn btn-primary form-control" id="ride" onclick="ImprimirRIDE();" title="Imprimir">
+                    <i class="fa fa-print"></i>  RIDE
+                </button>
+            </div>
+            <div class="col-md-2">
+                <button type="button" class="btn btn-primary form-control" id="sri" onclick="AutorizarSRI();" title="Autorizar SRI">
+                    <i class="fa fa-send"></i>  SRI
+                </button>
+            </div>
+            <div class="col-md-offset-4 col-md-1">
+                <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                    <i class="fa fa-print"></i>
+                </button>
             </div>
             <div class="col-md-1">
-                <label for="IdNuevo"></label>
                 <div class="form-group">
                     <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","GuiaRemision",new { Area = "Facturacion", IdEmpresa = Model.IdEmpresa },null)">
                         <i class="fa fa-plus"></i>
@@ -751,13 +788,13 @@
             success: function (data) {
                 if (data.resultado == 1)
                 {
-                    //$("#ride").show();
-                    //$("#sri").show();
+                    $("#ride").show();
+                    $("#sri").show();
                 }
                 else
                 {
-                    //$("#ride").hide();
-                    //$("#sri").hide();
+                    $("#ride").hide();
+                    $("#sri").hide();
                 }
             },
             error: function (error) {
