--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_GridViewPartial_guias_remision.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_GridViewPartial_guias_remision.cshtml
@@ -62,7 +62,7 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if ( Convert.ToDecimal(DataBinder.Eval(tc.DataItem, "IdCbteVta")) ==0 || DataBinder.Eval(tc.DataItem, "IdCbteVta") == null)
+                if ( (Convert.ToDecimal(DataBinder.Eval(tc.DataItem, "IdCbteVta")) ==0 || DataBinder.Eval(tc.DataItem, "IdCbteVta") == null) && Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "Estado")) == true)
                 {
                     ViewContext.Writer.Write(
                     Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdGuiaRemision = DataBinder.Eval(tc.DataItem, "IdGuiaRemision") }) + "&nbsp;");
