--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_019.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_019.cshtml
@@ -109,16 +109,47 @@
                     </div>
                 </div>
 
-                <div class="col-md-6">
+                <div class="col-md-8">
                     <div class="form-group">
                         <label for="IdCliente">Cliente</label>
                         @Html.Partial("_CmbCliente_Facturacion", Model.IdCliente)
                         @Html.ValidationMessageFor(q => q.IdCliente, "", new { @class = "text-danger", @id = "IdCliente" })
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label for="IdVendedor">Vendedor</label>
+                        @Html.DropDownListFor(q => q.IdVendedor, new SelectList(ViewBag.lst_vendedor, "IdVendedor", "Ve_Vendedor",Model.IdVendedor), new { @class = "form-control" })
+                        @Html.ValidationMessageFor(q => q.IdVendedor, "", new { @class = "text-danger" })
+                    </div>
+                </div>
                 <div class="col-md-2">
                     <div class="form-group">
                         <label for="">Fecha corte</label>
+                        <div class="input-group date">
+                            <div class="input-group-addon">
+                                <i class="fa fa-calendar"></i>
+                            </div>
+                            @Html.DevExpress().DateEditFor(q => q.fecha_ini, settings =>
+                       {
+                           settings.Name = "fecha_ini";
+                           settings.Properties.UseMaskBehavior = true;
+                           settings.Properties.EditFormat = EditFormat.Date;
+                           settings.Properties.EditFormatString = "dd/MM/yyyy";
+                           settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                           settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                       }).GetHtml()
+                            @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label for="">Fecha fin</label>
                         <div class="input-group date">
                             <div class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
@@ -134,18 +165,6 @@
                        }).GetHtml()
                             @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
                         </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label for="IdVendedor">Vendedor</label>
-                        @Html.DropDownListFor(q => q.IdVendedor, new SelectList(ViewBag.lst_vendedor, "IdVendedor", "Ve_Vendedor",Model.IdVendedor), new { @class = "form-control" })
-                        @Html.ValidationMessageFor(q => q.IdVendedor, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="col-md-2">
