--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/ParametrizacionContableProducto/_GridViewPartial_ParametrizacionContableProducto.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/ParametrizacionContableProducto/_GridViewPartial_ParametrizacionContableProducto.cshtml
@@ -67,14 +67,14 @@
         {
             column.FieldName = "Su_Descripcion";
             column.Caption = "Sucursal";
-            column.Width = Unit.Percentage(15);
+            column.Width = Unit.Percentage(10);
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
         settings.Columns.Add(column =>
         {
             column.FieldName = "bo_Descripcion";
             column.Caption = "Bodega";
-            column.Width = Unit.Percentage(15);
+            column.Width = Unit.Percentage(10);
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
         settings.Columns.Add(column =>
@@ -101,15 +101,15 @@
         settings.Columns.Add(column =>
         {
             column.FieldName = "pc_Cuenta";
-            column.Caption = "Cuenta";
-            column.Width = Unit.Percentage(20);
+            column.Caption = "Cuenta Costo";
+            column.Width = Unit.Percentage(15);
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdCtaCble_Costo";
             column.Caption = "Cuenta Costo";
-            column.Width = Unit.Percentage(20);
+            column.Width = Unit.Percentage(15);
             column.Visible = false;
             column.EditFormSettings.Visible = DefaultBoolean.True;
             column.SetEditItemTemplateContent(c =>
@@ -121,7 +121,7 @@
         {
             column.FieldName = "IdCtaCble_Inven";
             column.Caption = "Cuenta Inventario";
-            column.Width = Unit.Percentage(20);
+            column.Width = Unit.Percentage(15);
             column.Visible = false;
             column.EditFormSettings.Visible = DefaultBoolean.True;
             column.SetEditItemTemplateContent(c =>
@@ -129,7 +129,13 @@
                 Html.RenderPartial("_CmbCuenta_Inven", DataBinder.Eval(c.DataItem, "IdCtaCble_Inven"));
             });
         });
-
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pc_Cuenta_inven";
+            column.Caption = "Cuenta Inventario";
+            column.Width = Unit.Percentage(15);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
     if (ViewData["EditError"] != null)
