--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_producto.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_producto.cshtml
@@ -83,9 +83,9 @@
         });
 
         settings.Columns.Add("IdProducto","ID").Width = Unit.Percentage(10);
+        settings.Columns.Add("pr_codigo", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("pr_descripcion","Descripción").Width = Unit.Percentage(40);
         settings.Columns.Add("tp_descripcion", "Tipo").Width = Unit.Percentage(10);
-        settings.Columns.Add("nom_presentacion", "Presentación").Width = Unit.Percentage(10);
         settings.Columns.Add("ma_descripcion", "Marca").Width = Unit.Percentage(10);
         settings.Columns.Add("nom_categoria", "Categoria").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
