--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_aprobacion_facturas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_aprobacion_facturas.cshtml
@@ -35,18 +35,15 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
+
         settings.Columns.Add(column =>
         {
             column.FieldName = "co_factura";
             column.Caption = "Documento";
-            column.Width = Unit.Percentage(30);
-            column.PropertiesEdit.DisplayFormatString = "d";
-            column.EditorProperties().DateEdit(sp =>
-            {
-                column.PropertiesEdit.DisplayFormatString = "d";
-                sp.Width = Unit.Percentage(100);
-                sp.AllowMouseWheel = false;
-            });
+            column.Width = Unit.Percentage(15);
             column.EditFormSettings.Visible = DefaultBoolean.False;
             column.ReadOnly = false;
         });
@@ -55,7 +52,7 @@
         {
             column.FieldName = "info_proveedor.info_persona.pe_nombreCompleto";
             column.Caption = "Proveedor";
-            column.Width = Unit.Percentage(40);
+            column.Width = Unit.Percentage(20);
             column.PropertiesEdit.DisplayFormatString = "d";
             column.EditorProperties().DateEdit(sp =>
             {
@@ -66,12 +63,19 @@
             column.EditFormSettings.Visible = DefaultBoolean.False;
             column.ReadOnly = false;
         });
-
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "co_observacion";
+            column.Caption = "Observación";
+            column.Width = Unit.Percentage(25);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.ReadOnly = false;
+        });
         settings.Columns.Add(column =>
         {
             column.FieldName = "co_fechaOg";
             column.Caption = "Fecha";
-            column.Width = Unit.Percentage(10);
+            column.Width = Unit.Percentage(7);
             column.PropertiesEdit.DisplayFormatString = "d";
             column.EditorProperties().DateEdit(sp =>
             {
@@ -87,7 +91,7 @@
         {
             column.FieldName = "co_FechaFactura_vct";
             column.Caption = "Vence";
-            column.Width = Unit.Percentage(10);
+            column.Width = Unit.Percentage(7);
             column.PropertiesEdit.DisplayFormatString = "d";
             column.EditorProperties().DateEdit(sp =>
             {
@@ -99,28 +103,20 @@
             column.EditFormSettings.Visible = DefaultBoolean.False;
 
         });
-
+        /*
         settings.Columns.Add(column =>
         {
             column.FieldName = "Tipo_Vcto";
             column.Caption = "Estado";
             column.Width = Unit.Percentage(5);
-            column.EditorProperties().SpinEdit(sp =>
-            {
-                sp.MinValue = 0;
-                sp.MaxValue = 999999999;
-                sp.Width = Unit.Percentage(100);
-                column.PropertiesEdit.DisplayFormatString = "n2";
-                sp.AllowMouseWheel = false;
-            });
             column.EditFormSettings.Visible = DefaultBoolean.False;
-
         });
+        */
         settings.Columns.Add(column =>
         {
             column.FieldName = "Saldo_OG";
             column.Caption = "Saldo";
-            column.Width = Unit.Percentage(5);
+            column.Width = Unit.Percentage(7);
             column.EditorProperties().SpinEdit(sp =>
             {
                 sp.MinValue = 0;
@@ -136,7 +132,7 @@
         {
             column.FieldName = "co_valorpagar";
             column.Caption = "Valor a pagar";
-            column.Width = Unit.Percentage(5);
+            column.Width = Unit.Percentage(7);
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
             column.EditorProperties().SpinEdit(p =>
             {
@@ -148,7 +144,7 @@
         });
         settings.Settings.ShowFooter = true;
         settings.ClientSideEvents.EndCallback = "function(s,e){ armar_diario();if (s.IsEditing()) {var editor = s.GetEditor('co_valorpagar');editor.Focus();}}";
-        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "co_valorpagar").DisplayFormat = "Total {0:c2}";
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "co_valorpagar").DisplayFormat = "{0:c2}";
 
     });
 
